swagger modif
